# traceframe

./: .commitlintrc.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml  justfile  release-please-config.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  evidence-gate.yml  release.yml  scorecard.yml
docs/: ci-gate.md  codex-hooks.md  codex-omx-hooks.md  harness-integration.md  hooks.md  host-smoke.md  import.md  publishing.md  release-signing.md  storage.md
examples/: agent-run.slod  agent-run.traceframe  agent-session.slod  agent-session.traceframe  harness-recorder.rs
html-artifacts/: slod-status.html
scripts/: capture-session.sh  check-local-agent-files.sh  check-release-readiness.sh  codex-omx-hook-smoke.sh  evidence-gate-smoke.sh  hook-smoke.sh  host-smoke.sh
skills/slod/: SKILL.md
skills/traceframe/: SKILL.md
src/: hook.rs  hook_tests.rs  host.rs  import.rs  ledger.rs  lib.rs  main.rs  policy.rs  render.rs  trace.rs  trace_tests.rs
src/commands/: hook.rs  import.rs  ledger.rs  lifecycle.rs  mod.rs  policy.rs  report.rs  verify.rs
tests/: capture.rs  cli.rs  hook.rs  import.rs  ledger.rs  lifecycle.rs  policy.rs  render.rs  verify.rs
tests/common/: mod.rs
