[package]
name = "traceframe"
version = "0.1.0"
edition = "2024"
description = "Local-first trace recorder and inspector for AI agent workflows."
license = "MIT"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting", "macros"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"
