[package]
name = "traceframe"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Local-first trace recorder and inspector for AI agent workflows."
license = "MIT"
repository = "https://github.com/Arakiss/traceframe"
homepage = "https://traceframe.dev"
readme = "README.md"
authors = ["Petru Arakiss <petruarakiss@gmail.com>"]
keywords = ["ai-agents", "trace", "cli", "observability", "harness"]
categories = ["command-line-utilities", "development-tools::debugging"]
include = [
    "src/**",
    "tests/**",
    "examples/**",
    "docs/**",
    "scripts/**",
    "skills/**",
    "assets/banner.svg",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "SECURITY.md",
    "rust-toolchain.toml",
]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting", "macros"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"
